--- a/main/templates/user/account.html
+++ b/main/templates/user/account.html
@@ -77,11 +77,31 @@
             </div>
             
             <br>
+
+            <div>
+                {{ form.bio.label( class="form-label" ) }}
+
+                <br>
+
+                {{ form.bio( class="form-control", rows = 5) }}
+
+                {% if form.bio.errors %}
+                    <div>
+                        {% for error in form.bio.errors %}
+                            <span style="color: red;">{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% endif %}
+            </div>    
+
+            <br>        
             
             <div>
                 {{ form.submit( class='btn' ) }}
             </div>
         </form>
     </div>
+
+    <br><br><br>
 
 {% endblock %}
