--- a/main/templates/user/register.html
+++ b/main/templates/user/register.html
@@ -30,8 +30,10 @@
                 {{ form.email.label() }}
             
                 <br>
-
-                {{ form.email() }}
+                <div class="input-group mb-3">
+                    {{ form.email(class="form-control", placeholder="Institution email") }}
+                    <span class="input-group-text">@cardiff.ac.uk</span>
+                </div>
 
                 {% if form.email.errors %}
                     <div>
@@ -112,6 +114,42 @@
                 {% endif %}
             </div>
 
+            <br>
+            
+            <div class = "pb-3">
+                {{ form.university_year.label(class="form-label") }}
+
+                <div class="input-group mb-3">
+                    {{ form.university_year(class="form-select", placeholder="university_year") }}
+                </div>
+
+                {% if form.university_year.errors %}
+                <div>
+                    {% for error in form.university_year.errors %}
+                    <span style="color: red;">{{ error }}</span>
+                    {% endfor %}
+                </div>
+                {% endif %}
+            </div>
+
+            <br>
+
+            <div class = "pb-3">
+                {{ form.university_school.label(class="form-label") }}
+
+                <div class="input-group mb-3">
+                    {{ form.university_school(class="form-select", placeholder="university_school") }}
+                </div>
+
+                {% if form.university_school.errors %}
+                <div>
+                    {% for error in form.university_school.errors %}
+                    <span style="color: red;">{{ error }}</span>
+                    {% endfor %}
+                </div>
+                {% endif %}
+            </div>
+            
             <br>
             
             <div>
