social stuff updated -> (profile & offline)

--- a/main/templates/includes/footer.html
+++ b/main/templates/includes/footer.html
@@ -1,9 +1,9 @@
 <footer class="bg-light">
     <div class="d-none d-sm-block position-absolute top-50 start-50 translate-middle">
-        Student Focus © Alex Deverson, 2023
+        Student Focus © Alexander Deverson, 2023
     </div>
 
     <div class="container d-xs-block d-sm-none text-center" style="padding-top: 3vh;">
-        Student Focus © Alex Deverson, 2023
+        Student Focus © Alexander Deverson, 2023
     </div>
 </footer>
