--- a/main/templates/module/module_question_single.html
+++ b/main/templates/module/module_question_single.html
@@ -38,7 +38,7 @@
         {% endif %}
     </div>
     <div class="">
-        <span>Date posted: </span> {{ question.date.strftime('%I:%M, %d %b %Y') }}
+        <span>Date posted: </span> {{ question.date.strftime('%I:%M, %d %b %Y') }} (UTC)
     </div>
 </div>
 
